--- a/lesson3/tipjar.html
+++ b/lesson3/tipjar.html
@@ -6,7 +6,7 @@ li { margin-top: 20px; }
 
 <h1>Lab 3: Tip-Jar</h1>
 
-<div>Create a solidity program that accepts ETH from anybody (using a fallback function), but only the creator of the contract (the owner) can withdraw it. Your submission should just be the solidity program.</div>
+<div>Create a solidity program that accepts ETH from anybody (using a fallback function), but only the creator of the contract (the owner) can withdraw it. Your submission should be the solidity program.</div>
 
 <ul>
 
@@ -22,8 +22,8 @@ Verify that an account other than the owner cannot withdraw:
 <div><img src="tipjar-screen2.png" /></div>
 </li>
 
-<li>
-Verify that the owner can withdraw the tips.
-</li>
+<li>Verify that the owner can withdraw the tips.</li>
+
+<li>Optional: In your contract, have a function that allows the owner to transfer ownership to another address.</li>
 
 </ul>
