--- a/index.html
+++ b/index.html
@@ -45,6 +45,14 @@ body {
 
 <div class="lesson">
   <h3>Lesson 3: Solidity Programming</h3>
+
+  <a href="lesson3/index.html">Slides</a>
+
+  <ul>
+    <li>Exercise: <a href="lesson3/overflow.html">overflow.html</a></li>
+    <li>Lab 3: <a href="lesson3/tipjar.html">tipjar.html</a></li>
+    <li>Lab 4: <a href="lesson3/coinflipgame.html">coinflipgame.html</a></li>
+  </ul>
 </div>
 
 
