--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -267,9 +267,10 @@ contract SimpleAdder {
 
 ## Primitive types
 
-* **uintX**: `X` is the number of bits: `uint256`, `uint32`, `uint8`
+* **uintX**: `X` is the number of bits: `uint256`, `uint32`
 * **intX**: Same as `uintX` except signed (negatives allowed): `int256`, `int64`
 * **bytesX**: Fixed size collection of bytes: `bytes32`
+* **address**: An Ethereum address (20 bytes)
 * **bool**: Boolean: `true` or `false`
 * **string**: Dynamic-size collection of characters
 * **bytes**: Dynamic-size collection of bytes
