--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -521,6 +521,22 @@ contract SimpleDAO {
 
 <section data-markdown><script type="text/template">
 
+## Lab 5
+
+[daohack.html](daohack.html)
+
+</script></section>
+
+
+<section data-markdown><script type="text/template">
+
+## 15 minute break
+
+</script></section>
+
+
+<section data-markdown><script type="text/template">
+
 ## End of lesson
 
 </script></section>
