--- a/lesson4/conditional-tipper.html
+++ b/lesson4/conditional-tipper.html
@@ -32,4 +32,6 @@ contract ConditionalTipper {
 
 <li>Note that the constructor is payable, and you need to send some ETH in when you deploy the contract. However, you will get refunded any amount that wasn't sent as a tip.</li>
 
+<li>What happens if your contract tries to tip more than you sent in?</li>
+
 </ul>
