--- a/lesson4/hack-coinflipgame.html
+++ b/lesson4/hack-coinflipgame.html
@@ -11,15 +11,15 @@ li { margin-top: 20px; }
 <ul>
 
 <li>
-There are several ways to do this. Note that a single-use contract can check conditions before and/or after it calls another contract. Also, understand that your single-use transaction is executing in the exact same block (in fact the same transaction) as the calls it makes to other contracts.
+There are several ways to do this. Note that a single-use contract can check conditions before and/or after it calls another contract. Also, understand that your single-use contract transaction is executing in the exact same block (in fact the same transaction) as the calls it makes to other contracts.
 </li>
 
 <li>
-Since the maximum bet size is 1/10th the contract balance, you can never fully empty it. Try to make your hack take as much as it can using the fewest transactions possible.
+Since the maximum bet size is 1/10th the contract balance, you can't fully empty it. Try to make your hack take as much as it can using the fewest transactions possible.
 </li>
 
 <li>
-Bonus: How many wins of maximum bet size does it take to get 90% of the balance? How about X%?
+Bonus: How many wins of maximum bet size does it take to get at least 90% of the balance? How about X%?
 </li>
 
 </ul>
