--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@ body {
 
 <div class="lesson">
   <h3>Lesson 4: Smart Contract Security</h3>
+
+  <a href="lesson4/index.html">Slides</a>
+
+  <ul>
+    <li>Exercise: <a href="lesson4/conditional-tipper.html">conditional-tipper.html</a></li>
+    <li>Lab 5: <a href="lesson4/hack-coinflipgame.html">hack-coinflipgame.html</a></li>
+    <li>Lab 6: <a href="lesson4/hack-simpledao.html">hack-simpledao.html</a></li>
+  </ul>
 </div>
 
 
