--- a/lesson4/conditional-tipper.html
+++ b/lesson4/conditional-tipper.html
@@ -9,9 +9,9 @@ li { margin-top: 20px; }
 
 <ul>
 
-<li>Maybe there is some crowd-funding goal and lots of people are sending tips to meet it, but you don't want the recipient to get more than they need. Since you don't know when your transaction will get processed, or whose transactions will come ahead of yours, you can't reliably calculate your tip beforehand.</li>
+<li>Let's say there is a crowd-funding campaign backed by a <code>Tipjar</code> contract. Lots of people are sending tips to it. Suppose you don't want to tip the campaign if they've already reached their funding goal. Since you don't know when your transaction will get processed, or whose transactions will come ahead of yours, you can't reliably calculate your tip beforehand.</li>
 
-<li>In the <a href="https://remix.ethereum.org">remix IDE</a>, deploy the TipJar contract created in <a href="../lesson3/tipjar.html">a previous lab</a>. Then use the following single-use contract to make sure that your tip doesn't bring the tipjar's balance over some specified amount.
+<li>In the <a href="https://remix.ethereum.org">remix IDE</a>, deploy the TipJar contract you created in <a href="../lesson3/tipjar.html">a previous lab</a>. Then use the following single-use contract to make sure that your tip doesn't bring the tipjar's balance over some specified amount.
 
 <pre>
 pragma solidity ^0.5.0;
