--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ body {
   <ul>
     <li>Exercise: <a href="lesson4/conditional-tipper.html">conditional-tipper.html</a></li>
     <li>Lab 5: <a href="lesson4/hack-coinflipgame.html">hack-coinflipgame.html</a></li>
-    <li>Lab 6: <a href="lesson4/hack-simpledao.html">hack-simpledao.html</a></li>
+    <!-- <li>Lab 6: <a href="lesson4/hack-simpledao.html">hack-simpledao.html</a></li> -->
   </ul>
 </div>
 
