--- a/lesson4/hack-simpledao.html
+++ b/lesson4/hack-simpledao.html
@@ -4,9 +4,9 @@ div { margin-top: 20px; }
 li { margin-top: 20px; }
 </style>
 
-<h1>Lab 6: Hack SimpleDAO</h1>
+<h1>Demo: Hack SimpleDAO</h1>
 
-<div>Write an attack contract in solidity to steal funds from the following <code>SimpleDAO</code> contract. Your submission should be the solidity program.</div>
+<div>Write an attack contract in solidity to steal funds from the following <code>SimpleDAO</code> contract. <-- Your submission should be the solidity program. --></div>
 
 <pre>
 pragma solidity ^0.5.0;
