--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -859,7 +859,7 @@ Hacker fallback:         <span class="highlightRed">dao.withdraw(10)</span>
 
 <section data-markdown><script type="text/template">
 
-## Lab 6
+## Demo
 
 [hack-simpledao.html](hack-simpledao.html)
 
