--- a/index.html
+++ b/index.html
@@ -64,13 +64,20 @@ body {
   <ul>
     <li>Exercise: <a href="lesson4/conditional-tipper.html">conditional-tipper.html</a></li>
     <li>Lab 5: <a href="lesson4/hack-coinflipgame.html">hack-coinflipgame.html</a></li>
-    <!-- <li>Lab 6: <a href="lesson4/hack-simpledao.html">hack-simpledao.html</a></li> -->
+    <li>Demo: <a href="lesson4/hack-simpledao.html">hack-simpledao.html</a></li>
   </ul>
 </div>
 
 
 <div class="lesson">
   <h3>Lesson 5: Full Stack Security</h3>
+
+  <a href="lesson5/index.html">Slides</a>
+
+  <ul>
+    <li>Demo: <a href="lesson5/xss.html">xss.html</a></li>
+    <li>Lab 6: <a href="lesson5/cheque-cashing.html">cheque-cashing.html</a></li>
+  </ul>
 </div>
 
 
