--- a/index.html
+++ b/index.html
@@ -84,5 +84,5 @@ body {
 <div class="lesson">
   <h3>Lesson 6: Final Exam</h3>
 
-  <a href="lesson4/review.html">Review</a>
+  <a href="review/index.html">Review</a>
 </div>
