--- a/review/index.html
+++ b/review/index.html
@@ -334,7 +334,7 @@
   * Params with types and names, ie: `uint256 id`
   * Access restrictions control who can call them:
     * public, private, external, internal
-  * Storage resitrictions control what the function can do:
+  * Storage restrictions control what the function can do:
     * pure, view, (none)
 
 </script></section>
