--- a/review/index.html
+++ b/review/index.html
@@ -118,7 +118,7 @@
 
 * True Random Number Generators (RNGs)
   * Thermal noise, wiggling mouse
-* Psuedo-RNGs (PRNGs)
+* Pseudo-RNGs (PRNGs)
   * Start with a seed and return a deterministic sequence of values
 * Cryptographically-Secure-PRNGs
   * Can't predict future values without knowing the seed
