note about encryption

--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -524,6 +524,18 @@ On blockchains, almost always **elliptic curves**
 </script></section>
 
 
+
+<section data-markdown><script type="text/template">
+
+## What about encryption?
+
+* Encryption is not used much in blockchains
+* Generally assumed that all information published is publicly visible
+
+</script></section>
+
+
+
 <section data-markdown><script type="text/template">
 
 ## Lab 1: Vanity Address
