--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -527,6 +527,32 @@ On blockchains, almost always **elliptic curves**
 
 <section data-markdown><script type="text/template">
 
+## Multi-Signatures
+
+* When several people agree on something, they can all sign same message
+
+<img src="multi-sig-simple.svg" style="background-color: white;" />
+
+</script></section>
+
+
+
+
+<section data-markdown><script type="text/template">
+
+## Schnorr Multi-Signatures
+
+* Schnorr signatures let you combine these into a single signature, that can still be verified
+
+<img src="multi-sig-schnorr.svg" style="background-color: white;" />
+
+</script></section>
+
+
+
+
+<section data-markdown><script type="text/template">
+
 ## What about encryption?
 
 * Encryption is not used much in blockchains
