--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -216,7 +216,8 @@ Linear Congruential Generator (LCG)
 
 * Relied on by all practical cryptography
 * If attackers could try every possible random value, they could crack your crypto-system
-* So, we make sure there are so many possible random values that it would take "forever" for them to do so
+  * Called a "brute force" attack
+* So, we make sure there are so many possible random values that it would take practically forever for them to do so
 
 </script></section>
 
