--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -74,7 +74,7 @@
 
 ### Lesson 2: Blockchain Architecture
 
-*Doug Hoyte, March 2019*
+*Doug Hoyte*
 
 [https://is.gd/blockchainsec](https://is.gd/blockchainsec)
 
