--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -88,7 +88,7 @@
 
 ### Lesson 3: Solidity Programming
 
-*Doug Hoyte, March 2019*
+*Doug Hoyte*
 
 [https://is.gd/blockchainsec](https://is.gd/blockchainsec)
 
