--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -88,7 +88,7 @@
 
 ### Lesson 4: Smart Contract Security
 
-*Doug Hoyte, March 2019*
+*Doug Hoyte*
 
 [https://is.gd/blockchainsec](https://is.gd/blockchainsec)
 
