--- a/lesson5/index.html
+++ b/lesson5/index.html
@@ -93,7 +93,7 @@
 
 ### Lesson 5: Full Stack Security
 
-*Doug Hoyte, March 2019*
+*Doug Hoyte*
 
 [https://is.gd/blockchainsec](https://is.gd/blockchainsec)
 
