--- a/lesson1/preimage.html
+++ b/lesson1/preimage.html
@@ -9,7 +9,7 @@ div { margin-top: 20px; }
 
 <div>Reverse a hash and discover a secret number.</div>
 
-<div>I chose a secret number and this is its SHA1 hash:</div>
+<div>I chose a secret number and this is its SHA1 hash (decimal representation):</div>
 
 <pre>
 f0501dc19c8aa8925e88f6044d49555b575b65b5
