--- a/lesson2/creating-transactions.html
+++ b/lesson2/creating-transactions.html
@@ -25,4 +25,5 @@ $ npm install ethers
   <li>You will need to create a new <a href="https://docs.ethers.io/ethers.js/html/api-providers.html">JsonRpcProvider</a> with the URL of <code>http://localhost:8545</code></li>
   <li>Then create a new <a href="https://docs.ethers.io/ethers.js/html/api-wallet.html">Wallet</a>, passing in a private key and the JsonRpcProvider instance</li>
   <li>Then call the <code>sendTransaction</code> method on the wallet</li>
+  <li><b>NOTE</b>: Only submit the script that you wrote. Do not submit zip files or node_modules or anything else, otherwise you will receive 0 (but you can re-submit)</li>
 </ul>
