--- a/lesson2/example-transactions.html
+++ b/lesson2/example-transactions.html
@@ -11,8 +11,8 @@ body {
 For each of the following transactions, determine:
 
 <ul>
-  <li>The sender ("to")</li>
-  <li>The recipient ("from")</li>
+  <li>The sender ("from")</li>
+  <li>The recipient ("to")</li>
   <li>The gas price the transaction offered (in Gwei)</li>
   <li>How much gas was used (in units of gas)</li>
   <li>How much the sender actually paid as a "transaction fee" (in ETH and/or $)</li>
