--- a/lesson3/coinflipgame.html
+++ b/lesson3/coinflipgame.html
@@ -4,9 +4,9 @@ div { margin-top: 20px; }
 li { margin-top: 20px; }
 </style>
 
-<h1>Lab 4: Coin Flip Game</h1>
+<h1>Exercise: Coin Flip Game</h1>
 
-<div>Modify the <code>generateRandomBit()</code> function in the <code>CoinFlipGame</code> contract below to generate a random coin flip. Your submission should be the solidity program.</div>
+<div>Try to modify the <code>generateRandomBit()</code> function in the <code>CoinFlipGame</code> contract below to generate a random coin flip.</div>
 
 <pre>
 pragma solidity ^0.5.0;
