--- a/lesson3/overflow.html
+++ b/lesson3/overflow.html
@@ -8,9 +8,9 @@ li { margin-top: 20px; }
 
 <ul>
 
-<li>Go to <a href="https://remix.ethereum.org">https://remix.ethereum.org</a></li>
+<li>Go to <a href="https://remix.ethereum.org">https://remix.ethereum.org</a> and select Solidity environment</li>
 
-<li>Create a new file (+ button in top left)</li>
+<li>Create a new file (+ button in top left), name it <pre>TestOverflow.sol</pre></li>
 
 <li>Enter this solidity code:
 
