--- a/lesson3/tipjar.html
+++ b/lesson3/tipjar.html
@@ -10,7 +10,7 @@ li { margin-top: 20px; }
 
 <ul>
 
-<li>Use the remix IDE, as described in <a href="overflow.html">the previous exercise</a></li>
+<li>Use the remix IDE, as described in the previous exercises: <a href="overflow.html">overflow</a> and <a href="coinflipgame.html">coinflipgame</a></li>
 
 <li>
 Verify that depositing to the tipjar by setting a value and clicking the <b>(fallback)</b> button decreases the balance of the sender:
