--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@ body {
 
   <ul>
     <li>Exercise: <a href="lesson3/overflow.html">overflow.html</a></li>
+    <li>Exercise: <a href="lesson3/coinflipgame.html">coinflipgame.html</a></li>
     <li>Lab 3: <a href="lesson3/tipjar.html">tipjar.html</a></li>
-    <li>Lab 4: <a href="lesson3/coinflipgame.html">coinflipgame.html</a></li>
   </ul>
 </div>
 
@@ -63,7 +63,7 @@ body {
 
   <ul>
     <li>Exercise: <a href="lesson4/conditional-tipper.html">conditional-tipper.html</a></li>
-    <li>Lab 5: <a href="lesson4/hack-coinflipgame.html">hack-coinflipgame.html</a></li>
+    <li>Lab 4: <a href="lesson4/hack-coinflipgame.html">hack-coinflipgame.html</a></li>
     <li>Demo: <a href="lesson4/hack-simpledao.html">hack-simpledao.html</a></li>
   </ul>
 </div>
@@ -76,7 +76,7 @@ body {
 
   <ul>
     <li>Demo: <a href="lesson5/xss.html">xss.html</a></li>
-    <li>Lab 6: <a href="lesson5/cheque-cashing.html">cheque-cashing.html</a></li>
+    <li>Lab 5: <a href="lesson5/cheque-cashing.html">cheque-cashing.html</a></li>
   </ul>
 </div>
 
