--- a/lesson4/hack-simpledao.html
+++ b/lesson4/hack-simpledao.html
@@ -6,7 +6,7 @@ li { margin-top: 20px; }
 
 <h1>Demo: Hack SimpleDAO</h1>
 
-<div>Write an attack contract in solidity to steal funds from the following <code>SimpleDAO</code> contract. <-- Your submission should be the solidity program. --></div>
+<div>Write an attack contract in solidity to steal funds from the following <code>SimpleDAO</code> contract.</div>
 
 <pre>
 pragma solidity ^0.5.0;
