--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -100,8 +100,7 @@
 
 ## Lesson Topics
 
-* Threat models
-* Contract interactions
+* Threat models, contract interactions
 * On-chain randomness
 * Re-entrancy
 
@@ -475,14 +474,6 @@ contract ConditionalTipper {
 </script></section>
 
 
-
-<section data-markdown><script type="text/template">
-
-## Lab 4
-
-[hack-coinflipgame.html](hack-coinflipgame.html)
-
-</script></section>
 
 
 
@@ -864,6 +855,19 @@ Hacker fallback:         <span class="highlightRed">dao.withdraw(10)</span>
 [hack-simpledao.html](hack-simpledao.html)
 
 </script></section>
+
+
+
+
+
+<section data-markdown><script type="text/template">
+
+## Lab 4
+
+[hack-coinflipgame.html](hack-coinflipgame.html)
+
+</script></section>
+
 
 
 
