--- a/lesson4/hack-coinflipgame.html
+++ b/lesson4/hack-coinflipgame.html
@@ -6,7 +6,7 @@ li { margin-top: 20px; }
 
 <h1>Lab 4: Hack Coin Flip Game</h1>
 
-<div>Write a single-use solidity contract to steal funds from the <code>CoinFlipGame</code> contract you made in <a href="../lesson3/coinflipgame.html">the previous lab</a>. Your submission should be the solidity program.</div>
+<div>Write a single-use solidity contract to steal funds from the <code>CoinFlipGame</code> contract we looked at in the previous class: <a href="../lesson3/coinflipgame.html">CoinFlipGame</a>. Your submission should be the solidity program.</div>
 
 <ul>
 
