zero-knowledge proofs

--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -633,6 +633,32 @@ contract ConditionalTipper {
 
 
 
+<section data-markdown><script type="text/template">
+
+## Zero-Knowledge Proofs
+
+* Imagine there are 2 copies of a photograph and there is a small difference between them
+* I see the difference but you don't
+* How can I prove that I see the difference to you without revealing what the difference is?
+
+</script></section>
+
+
+<section data-markdown><script type="text/template">
+
+## Interactive protocols
+
+* I give you the photos in a particular order
+* You take the photos behind your back and either swap them or not (choose randomly)
+* I tell you whether you swapped them or not
+  * If I'm wrong, I couldn't tell the difference
+  * If I'm right, maybe I could
+* Iterated protocol: Repeat this 1000 times
+  * If I'm right every time you can be pretty sure I can tell the difference
+
+</script></section>
+
+
 
 <section data-markdown><script type="text/template">
 
