--- a/lesson1/preimage.html
+++ b/lesson1/preimage.html
@@ -9,13 +9,13 @@ div { margin-top: 20px; }
 
 <div>Reverse a hash and discover a secret number.</div>
 
-<div>I chose a secret number and this is its SHA1 hash (decimal representation):</div>
+<div>I chose a secret number and this is the SHA1 hash of the number's decimal representation:</div>
 
 <pre>
 f0501dc19c8aa8925e88f6044d49555b575b65b5
 </pre>
 
-<div>HINT: It's less than 1 million.</div>
+<div>HINT: The number less than 1 million.</div>
 
 <div>
   <ol>
